--- a/css/ar-broncos.css
+++ b/css/ar-broncos.css
@@ -10,6 +10,7 @@
   background: linear-gradient(340deg, #ff315d, #ffcb3e);
   background-size: cover;
   background-attachment: fixed;
+  z-index: -1;
 }
 .contentUnit:nth-of-type(odd) .subHead {
   background: #ffffff;
@@ -30,6 +31,7 @@
     background: linear-gradient(340deg, #ff315d, #ffcb3e);
     background-size: cover;
     background-attachment: fixed;
+    z-index: -1;
     color: #ffffff;
   }
 }
