--- a/css/ar.css
+++ b/css/ar.css
@@ -81,6 +81,7 @@ p, ul, li {
     background: linear-gradient(340deg, #1f1f1f, #3b3b3b);
     background-size: cover;
     background-attachment: fixed;
+    z-index: -1;
   }
 
 .contentUnit:nth-of-type(even) .subHead {
@@ -136,6 +137,7 @@ p, ul, li {
         background: linear-gradient(340deg, #1f1f1f, #3b3b3b);
         background-size: cover;
         background-attachment: fixed;
+        z-index: -1;
         color: #ffffff;
       }
 }
