--- a/css/ar-broncos.css
+++ b/css/ar-broncos.css
@@ -30,7 +30,7 @@
   .contentUnit:nth-of-type(odd) .subHead {
     background: linear-gradient(340deg, #ff315d, #ffcb3e);
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: fixed !important;
     z-index: -1;
     color: #ffffff;
   }
