--- a/css/index.css
+++ b/css/index.css
@@ -3,18 +3,18 @@ a {
     font-weight: 300;
 }
 
-tspan {
+text {
     font-family: "Raleway", sans-serif;
     font-weight: 600;
     font-size: 1rem;
     text-anchor: middle;
 }
 
-tspan:nth-of-type(1) {
+text:nth-of-type(1) {
     font-size: 1.29rem
 }
 
-tspan:nth-of-type(2) {
+text:nth-of-type(2) {
     font-size: 1.5rem
 }
 
