--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,6 @@ a {
 h2 {
     font-family: "Roboto", sans-serif;
     font-weight: 100;
-    font-size: 2.5rem;
     line-height: 95%;
   }
 
@@ -21,6 +20,7 @@ p, ul, li {
     font-family: "Raleway", sans-serif;
     font-weight: 600;
     font-size: 0.9rem;
+    color: #ffffff;
     /*text-shadow: 1px 1px 5px rgba(0, 0, 0, .3);*/
   }
 
@@ -117,13 +117,35 @@ tspan:nth-of-type(2) {
 
 .contentUnit:nth-of-type(even) .subHead {
     background-color: #ffffff;
-    color: rgb(14, 250, 203);
+    color: rgb(152, 152, 255);
 }
 
-.contentUnit:nth-of-type(even) p, ul, li {
-    color: #2c2c2c;
+#brandsSVG {
+    height: 100%;
+    width: 100%;
 }
-  
+
+.custom-btn {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-size: 1.5rem;
+    line-height: 100%;
+    background-color: #ffffff00;
+    color: #ffffff;
+    /* border-color: #ffffff; */
+    display: inline-flex;
+    vertical-align: middle;
+}
+
+.custom-btn:hover {
+    background-color: #ffffff;
+    color: rgb(152, 152, 255);
+}
+
+i {
+    line-height: 100%;
+    transform: translateY(50%);
+}
 
 
 @media (min-width: 768px) {
@@ -146,6 +168,23 @@ tspan:nth-of-type(2) {
         background: linear-gradient(340deg, rgb(28,255,151), rgb(0,246,255));
         color: #ffffff;
     }
+
+    .custom-btn {
+        font-family: "Roboto", sans-serif;
+        font-weight: 100;
+        line-height: 100%;
+        background-color: #ffffff00;
+        color: #2c2c2c;
+        /* border-color: #2c2c2c; */
+        display: inline-flex;
+        vertical-align: middle;
+    }
+    
+    .custom-btn:hover {
+        background-color: #2c2c2c;
+        color: #ffffff;
+    }
+
 }
 
 
