--- a/css/index.css
+++ b/css/index.css
@@ -16,12 +16,12 @@ tspan {
     text-anchor: middle;
 }
 
-p, ul, li {
+.contentUnit~p, .contentUnit~ul, .contentUnit~li {
     font-family: "Raleway", sans-serif;
     font-weight: 600;
     font-size: 0.9rem;
     color: #ffffff;
-    /*text-shadow: 1px 1px 5px rgba(0, 0, 0, .3);*/
+    /* text-shadow: 1px 1px 5px rgba(0, 0, 0, .3); */
   }
 
 .subText {
@@ -48,7 +48,7 @@ tspan:nth-of-type(2) {
 .pageHeadContainer {
     width: calc(100vw - (100vw - 100%));
     height: calc(100vh - 60px);
-    background: linear-gradient(340deg, rgb(28,255,151), rgb(0,246,255));
+    background: linear-gradient(340deg, rgb(255, 0, 255), rgb(0, 255, 255));
     background-size: cover;
 
 }
@@ -60,11 +60,11 @@ tspan:nth-of-type(2) {
 }
 
 #stop1 {
-    stop-color: rgb(0, 246, 255);
+    stop-color: rgb(0, 255, 255);
 }
 
 #stop2 {
-    stop-color: rgb(28, 255, 151);
+    stop-color: rgb(255, 0, 255);
 }
 
 .pictureContainer {
@@ -112,7 +112,7 @@ tspan:nth-of-type(2) {
   }
 
 .contentUnit:nth-of-type(even) {
-    background: linear-gradient(340deg, rgb(28,255,151), rgb(0,246,255));
+    background: linear-gradient(340deg, rgb(255, 0, 255), rgb(0, 255, 255));
 }
 
 .contentUnit:nth-of-type(even) .subHead {
@@ -143,7 +143,7 @@ tspan:nth-of-type(2) {
 
 i {
     line-height: 100%;
-    transform: translateY(50%);
+    /* transform: translateY(50%); */
 }
 
 
@@ -164,7 +164,7 @@ i {
       }
 
     .contentUnit:nth-of-type(even) .subHead {
-        background: linear-gradient(340deg, rgb(28,255,151), rgb(0,246,255));
+        background: linear-gradient(340deg, rgb(255, 0, 255), rgb(0, 255, 255));
         color: #ffffff;
     }
 
