--- a/css/work.css
+++ b/css/work.css
@@ -7,7 +7,7 @@ a {
     font-weight: 300;
 }
 
-.dingus {
+.custBut {
     background-color: #1f1f1f;
     
 }
@@ -17,9 +17,9 @@ a {
 }
 
 .nav-pills a {
-    width: 85%;
-    margin-left: 1rem;
-    margin-right: 1rem;
+    /* width: 85%; */
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 :root {
@@ -27,7 +27,7 @@ a {
     --pink: #f700ff;
   }
 
-  .dingus {
+  .custBut {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
     position: relative;
@@ -40,19 +40,67 @@ a {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    padding: 0.75em 1.75em;
+    padding: 1em 1em;
     border-radius: 50px;
     display: inline-block;
     color: #3c3c3c;
+}
+
+.card {
+    background-color: #2f2f2f;
+    color: #ffffff;
+}
     
-    /* Our gradient */
+
+    .item1 rect {
+        clip-path: url(#clipping1);
+    }
+    .item2 rect {
+        clip-path: url(#clipping2);
+    }
+
+    .knockoutTextContainer {
+        width: 100%;
+        height: 100%;
+    }
+        
+    .knockoutTextBox {
+        width: 100%;
+        height: 100%;
+    }
+    tspan {
+        font-family: "Roboto", sans-serif;
+        font-weight: 300;
+        font-size: 4rem;
+        text-anchor: middle;
+    }
+    #stop1, #stop3 {
+        stop-color: rgb(83, 192, 255);
+    }
     
-    /* background: #1f1f1f; */
-  }
+    #stop2, #stop4 {
+        stop-color: rgb(215, 13, 255);
+    }
+
+    .categoryHolder {
+        min-height: 33rem;
+        margin-bottom: 3rem;
+        border-radius: 1rem;
+        background-color: #3c3c3c;
+    }
+
+    .comingSoon {
+        color: rgb(255, 255, 255);
+        font-size: 100%;
+        font-family: "Railway", sans-serif;
+        font-weight: 300;
+    }
+
+ 
 
 
 
-  .dingus::before {
+  .custBut::before {
     content: '';
 
     z-index: -1;
@@ -77,9 +125,53 @@ a {
   }
 
 
-  .dingus:hover::before {
+  .custBut:hover::before {
     opacity: 1;
     transition: opacity 300ms;
   }
 
+  #buttonSpriteAR1 {
+    --animSteps: 18;
+    max-width: 125px;
+    height: 125px;
+    background-image: url('../images/ar-images/AR-Button-Icon-Anim2.png');
+    background-position: 0px 0px;
+    transform: scale(1);
+    position: relative;
+  }
+  #buttonSpriteAR2 {
+    --animSteps: 18;
+    max-width: 125px;
+    height: 125px;
+    background-image: url('../images/ar-images/VFX-Button-Icon-Anim.png');
+    background-position: 0px 0px;
+    transform: scale(1);
+    position: relative;
+  }
+
+
+
+  /* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  }
   
+  /* // Large devices (desktops, 992px and up) */
+  @media (min-width: 992px) {
+    #buttonSpriteAR1 {
+        max-width: 250px;
+        height: 250px;
+        background-image: url('../images/ar-images/AR-Button-Icon-Anim3.png');
+        /* position: relative; */
+      }
+    #buttonSpriteAR2 {
+        max-width: 250px;
+        height: 250px;
+        background-image: url('../images/ar-images/VFX-Button-Icon-Anim2.png');
+        /* position: relative; */
+      }
+  }
+  
+  
+  /* // Extra large devices (large desktops, 1200px and up) */
+  @media (min-width: 1200px) {
+  }
