--- a/css/ar.css
+++ b/css/ar.css
@@ -19,10 +19,14 @@ p, ul, li {
     font-size: 0.9rem;
     /* text-shadow: 1px 1px 5px rgba(0, 0, 0, .3); */
   }
-
+  a {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+}
 
 #leadDiv {
-    height: 100vh;
+    height: calc(100vh - 60px);
+    margin-top: 60px;
     width: 100%;
     overflow: hidden;
   }
