--- a/css/index.css
+++ b/css/index.css
@@ -132,6 +132,7 @@ tspan:nth-of-type(2) {
     background-color: #ffffff00;
     color: #ffffff;
     padding: 5px 5px 10px 10px;
+    border-radius: 0.6rem;
     /* position:relative; */
 }
 
